snapshots/test_init__init_fish_prompt_hook.snap
---
source: tests/test_init.rs
info:
  program: arbor
  args:
    - init
    - fish
    - "--hook"
    - prompt
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
# arbor shell integration for fish

# Helper function to parse arbor output and handle directives
function _arbor_exec
    set -l output (arbor $argv 2>&1)
    set -l exit_code $status

    # Parse output line by line
    for line in $output
        if string match -q '__ARBOR_CD__*' -- $line
            # Extract path and change directory
            cd (string sub -s 14 -- $line)
        else
            # Regular output - print it
            echo $line
        end
    end

    return $exit_code
end

# Main commands that support directory changes
function arbor-switch
    _arbor_exec switch --internal $argv
end

function arbor-finish
    _arbor_exec finish --internal $argv
end

# Convenience aliases
alias arbor-sw='arbor-switch'
alias arbor-fin='arbor-finish'


# Prompt hook for tracking current worktree
function _arbor_prompt_hook --on-event fish_prompt
    # Call arbor to update tracking
    command arbor hook prompt 2>/dev/null; or true
end


----- stderr -----
